# c-_lab7

./: CMakeCache.txt  CMakeLists.txt  README.md  build.ninja  cmake_install.cmake  functions.hpp  main.cpp  somelogic.txt
